codeRun: TwoNumbersMultiplication